# ResNet

./: .envrc  .gitignore  NEW_IMPLEMENTATION_README.md  README.md  STANDARD_RESNET_README.md  automated_training.py  autorun.sh  base_autorun.sh  pixi.toml  pyproject.toml  run_automated_training.sh
docs/: AUTOMATED_TRAINING.md  CLI_ARGUMENTS.md  CONTRIBUTING.md  DATA_PREPARATION.md  MODEL_ARCHITECTURE.md  MODULES.md  PROJECT_ARCHITECTURE.md  PRUNING_GUIDE.md  TRAINING_GUIDE.md
src/: base_model_main.py  confusionMatrix.py  dataset.py  dataset_npy.py  lr_scheduler.py  main.py  main_lightweight.py  pruning_main.py  resnet_standard.py  test_resnet_standard.py  test_umap.py  tester.py  trainer.py  utils.py  visualizer.py
src/base_model/: __init__.py  args.py  confusionMatrix.py  dataset.py  fix_compiled_weights.py  lr_scheduler.py  main.py  resnet_lightweight.py  resnet_standard.py  tester.py  trainer.py  utils.py  visualizer.py
src/pruning/: README.md  args.py  checkpoint.py  evaluator.py  output.py  pruner.py  topology.py  trainer.py  utils.py
src/qat/: README.md  utils.py
