[project]
name = "ResNet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "prettytable>=3.17.0",
    "psutil>=7.2.2",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torch-pruning>=1.6.1",
    "torchsummary>=1.5.1",
    "umap-learn>=0.5.11",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130"},
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
